@@ -367,6 +367,11 @@ Working 4.05.x branch
 
 - GPR#1073: Remove statically allocated compare stack.
   (Stephen Dolan)
+- GPR#1271: Don't generate Ialloc instructions for closures that exceed
+  Max_young_wosize; instead allocate them on the major heap.  (Related
+  to GPR#1250.)
+  (Mark Shinwell)
+
 
 OCaml 4.05.0 (13 Jul 2017):
 ---------------------------
